@@ -1,3 +1,11 @@
+2008-08-19 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b140
+
+ * Change: Removed redundant function getFile()
+
+ * Fix: Code robustness in various places.
+
+ * Fix: Avoid php notice when $stm is not set.
+
 2008-08-19 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b139
 
  * Change: Some layout changes to make it easier to use 1.5.x skins.
